--- a/scss/_HomePage.scss
+++ b/scss/_HomePage.scss
@@ -29,6 +29,7 @@
   }
 
   .social-media {
+    margin-bottom: 36px;
     .__social-button {
       display: flex;
       align-items: center;
@@ -41,6 +42,27 @@
       background: $white;
       border-radius: 50%;
       filter: drop-shadow(4px 4px 4px #f4c203);
+    }
+  }
+
+  .video-button {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    padding: 0;
+
+    .__video-label {
+      position: absolute;
+      top: 30%;
+      font-weight: 900;
+      font-size: 36px;
+      line-height: 40px;
+    }
+
+    .__video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
