--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -26,6 +26,18 @@ body {
   color: $white;
   overflow-x: hidden;
 
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0;
+    font-weight: bold;
+    @include font-size(36);
+    @include line-height(40);
+  }
+
   a {
     text-decoration: none;
   }
