--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -93,3 +93,9 @@ Link {
     text-decoration: none;
   }
 }
+
+.footer {
+  width: 100vw;
+  height: 200px;
+  background-image: url("../../images/yellow-wavy-footer.png");
+}
