Separated HomePage in to components

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,7 @@
 @import "NavBar";
 @import "MobileMenu";
 @import "HomePage";
+@import "SocialMediaButtons";
+@import "VideoPreviewButton";
+@import "SocialMediaFeed";
+@import "ContactForm";
