--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "globals";
 @import "NavBar";
 @import "MobileMenu";
+@import "NotFound";
 @import "HomePage";
 @import "SocialMediaButtons";
 @import "VideoPreviewButton";
