event calendar styled

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,4 +10,5 @@
 @import "SocialMediaFeed";
 @import "ContactForm";
 @import "AboutPage";
-@import 'VideosPage';
+@import "VideosPage";
+@import "EventCalendar";
