--- a/scss/_ContactForm.scss
+++ b/scss/_ContactForm.scss
@@ -33,4 +33,36 @@
       }
     }
   }
+
+  .__contact-form {
+    * {
+      margin-bottom: 12px;
+    }
+    .--name-input,
+    .--email-input {
+      width: 100%;
+      height: 50px;
+      padding-left: 1rem;
+      font-family: "MuseoModerno", cursive;
+    }
+
+    .--message-input {
+      width: 100%;
+      height: 204px;
+      padding: 1rem;
+      font-family: "MuseoModerno", cursive;
+      resize: none;
+    }
+    .--send-message {
+      width: 200px;
+      height: 50px;
+      margin-left: auto;
+      margin-right: auto;
+      background: $yellow;
+      font-family: "MuseoModerno", cursive;
+      @include font-size(24);
+      border: none;
+      outline: none;
+    }
+  }
 }
