contact form setup to send data to a backend

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -121,3 +121,16 @@ Link {
   height: 200px;
   background-image: url("../../images/yellow-wavy-footer.png");
 }
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20vh);
+  visibility: hidden;
+  transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+  will-change: opacity, visibility;
+}
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
