--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -134,3 +134,30 @@ Link {
   transform: none;
   visibility: visible;
 }
+
+.fade-in-section-x {
+  opacity: 0;
+  transform: translateX(20vh);
+  visibility: hidden;
+  transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+  will-change: opacity, visibility;
+}
+.fade-in-section-x.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+.--back-button {
+  margin-bottom: 1.5rem;
+  padding: 0.375rem 1.5rem;
+  border: none;
+  text-align: left;
+  box-shadow: 0px 0px 0.4375rem rgba(0, 0, 0, 0.293139);
+  border-radius: 0.125rem;
+  transition: all 0.3s ease;
+  cursor: pointer;
+
+  color: $black;
+  background: $yellow;
+}
