emailJS form is live
The contact form is emailed to the site owner's gmail account

--- a/scss/_ContactForm.scss
+++ b/scss/_ContactForm.scss
@@ -38,6 +38,11 @@
     * {
       margin-bottom: 12px;
     }
+
+    .--option-input {
+      display: none;
+    }
+
     .--name-input,
     .--email-input {
       width: 100%;
