--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@
 @import "SocialMediaButtons";
 @import "VideoPreviewButton";
 @import "SocialMediaFeed";
-@import "ContactForm";
+@import "Contact";
 @import "AboutPage";
 @import "VideosPage";
 @import "EventCalendar";
