--- a/scss/_NavBar.scss
+++ b/scss/_NavBar.scss
@@ -1,18 +1,17 @@
-.nav-bar__container {
-  width: 100%;
-  height: 72px;
-  padding: 1rem 1.5rem;
-  background: radial-gradient(
-    128.88% 128.88% at 103.9% -10.39%,
-    $black 0%,
-    $black 53.09%,
-    $black 100%
-  );
-  @include font-size(24);
-  color: $white;
-  border: 3px solid $yellow;
-
-  .nav-bar {
+.nav-bar {
+  .nav-bar-contents {
+    width: 100%;
+    height: 72px;
+    padding: 1rem 1.5rem;
+    background: radial-gradient(
+      128.88% 128.88% at 103.9% -10.39%,
+      $black 0%,
+      $black 53.09%,
+      $black 100%
+    );
+    @include font-size(24);
+    color: $white;
+    border: 3px solid $yellow;
     .__left-content {
       .__language {
         .--language-button {
@@ -25,8 +24,8 @@
       background-color: transparent;
       border: none;
       cursor: pointer;
-      display: flex;
       padding: 0;
+      margin-left: auto;
 
       .line {
         fill: none;
