desktop navbar created and styled

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "mixins";
 @import "globals";
 @import "NavBar";
+@import "HamburgerButton";
 @import "MobileMenu";
 @import "NotFound";
 @import "HomePage";
