--- a/scss/_NavBar.scss
+++ b/scss/_NavBar.scss
@@ -1,7 +1,7 @@
 .nav-bar {
   .nav-bar-contents {
     width: 100%;
-    height: 72px;
+    height: 64px;
     padding: 1rem 1.5rem;
     background: radial-gradient(
       128.88% 128.88% at 103.9% -10.39%,
@@ -12,7 +12,30 @@
     @include font-size(24);
     color: $white;
     border: 3px solid $yellow;
+
+    @include respond-above(lg) {
+      height: 140px;
+      padding: 40px 40px;
+      background: radial-gradient(
+        128.88% 128.88% at 103.9% -10.39%,
+        $black 0%,
+        $black 53.09%,
+        $black 100%
+      );
+      color: $white;
+      border: none;
+    }
+
     .__left-content {
+      .__logo {
+        width: 60px;
+        height: 60px;
+        margin-right: 40px;
+        background: $yellow;
+        @include font-size(24);
+        color: $black;
+      }
+
       .__language {
         .--language-button {
           @include font-size(24);
@@ -20,49 +43,23 @@
       }
     }
 
-    .hamburger-button {
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-      padding: 0;
-      margin-left: auto;
+    .__nav-links {
+      margin-right: auto;
 
-      .line {
-        fill: none;
-        stroke: $white;
-        stroke-width: 8;
-        transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
-          stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+      .navigation-button {
+        color: $white;
+        text-align: left;
+        @include font-size(24);
+        font-weight: 300;
 
-        &--1 {
-          stroke-dasharray: 60 207;
-          stroke-width: 8;
-        }
-        &--2 {
-          stroke-dasharray: 60 60;
-          stroke-width: 8;
-        }
-        &--3 {
-          stroke-dasharray: 60 207;
-          stroke-width: 8;
-        }
-      }
-      &.open .line {
-        &--1 {
-          stroke-dasharray: 90 207;
-          stroke-dashoffset: -134;
-          stroke-width: 6;
-        }
-        &--2 {
-          stroke-dasharray: 1 60;
-          stroke-dashoffset: -30;
-          stroke-width: 6;
-        }
-        &--3 {
-          stroke-dasharray: 90 207;
-          stroke-dashoffset: -134;
-          stroke-width: 6;
-        }
+        // &::before {
+        //   display: inline-block;
+        //   content: "";
+        //   width: 6px;
+        //   height: 46px;
+        //   margin-right: 13px;
+        //   background: $yellow;
+        // }
       }
     }
   }
