--- a/scss/_Contact.scss
+++ b/scss/_Contact.scss
@@ -1,14 +1,37 @@
 .contact {
-  scroll-padding-top: -360px;
-
   .contact-options {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
+
+    @include respond-above(lg) {
+      display: grid;
+      grid-template-rows: auto auto;
+      grid-template-columns: auto auto;
+      gap: 1rem;
+      width: 600px;
+      height: 600px;
+      margin-right: auto;
+      margin-left: auto;
+      padding: 1rem;
+      background: transparent;
+      border: 2px solid $yellow;
+    }
 
     .__contact-option {
       display: grid;
       grid-template-columns: auto auto;
       margin-right: auto;
       margin-bottom: 36px;
+
+      @include respond-above(lg) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 0;
+      }
 
       .__circle-button {
         display: flex;
@@ -19,9 +42,20 @@
         margin-left: 6px;
         @include font-size(62);
         color: $black;
-        background: $white;
-        border-radius: 50%;
-        filter: drop-shadow(4px 4px 4px #f4c203);
+        background: $yellow;
+
+        @include respond-above(lg) {
+          width: 200px;
+          height: 200px;
+          margin-bottom: 0.8rem;
+          @include font-size(100);
+
+          &:hover {
+            @include font-size(110);
+            border: 2px solid black;
+            transition: all 0.3s ease;
+          }
+        }
       }
 
       .--label {
@@ -32,13 +66,39 @@
         margin-left: 1.5rem;
         text-align: left;
         @include font-size(24);
+
+        @include respond-above(lg) {
+          display: block;
+          justify-content: center;
+          align-items: center;
+          margin: 0;
+          text-align: center;
+          @include font-size(16);
+        }
       }
     }
   }
 
   .__contact-form {
+    margin-right: auto;
+    margin-left: auto;
+    padding: 1rem;
+    border: 2px solid $yellow;
+    text-align: left;
+
     * {
       margin-bottom: 12px;
+    }
+
+    @include respond-above(md) {
+      display: grid;
+      grid-column-gap: 50px;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas:
+        "name text-area"
+        "email text-area"
+        "submit text-area";
+      width: 600px;
     }
 
     .--option-input {
@@ -53,23 +113,32 @@
       font-family: "MuseoModerno", cursive;
     }
 
+    .--name-input {
+      grid-area: name;
+    }
+    .--email-input {
+      grid-area: email;
+    }
+
     .--message-input {
       width: 100%;
       height: 204px;
       padding: 1rem;
       font-family: "MuseoModerno", cursive;
       resize: none;
+      grid-area: text-area;
     }
     .--send-message {
       width: 200px;
       height: 50px;
-      margin-left: auto;
+      justify-content: left;
       margin-right: auto;
       background: $yellow;
       font-family: "MuseoModerno", cursive;
       @include font-size(24);
       border: none;
       outline: none;
+      grid-area: submit;
     }
   }
 }
