--- a/scss/_HomePage.scss
+++ b/scss/_HomePage.scss
@@ -54,7 +54,7 @@
           align-items: center;
           margin-bottom: 100px;
 
-          .navigation-button {
+          .--navigation-button {
             display: flex;
             align-items: center;
             justify-content: space-between;
