--- a/scss/_MobileMenu.scss
+++ b/scss/_MobileMenu.scss
@@ -15,7 +15,6 @@
   width: 271px;
   height: 100vh;
   right: -100%;
-  top: 72px;
   background: $black;
   border-left: 3px solid $yellow;
   transition: all 0.3s ease;
@@ -34,7 +33,7 @@
     margin: 1.5rem;
     border-radius: 10px;
 
-    .navigation-button {
+    .--navigation-button {
       color: $white;
       text-align: left;
       @include font-size(40);
