desktop styles added for about page

--- a/scss/_AboutPage.scss
+++ b/scss/_AboutPage.scss
@@ -1,8 +1,42 @@
 .about-page {
-  .__about-photo {
-    width: 309px;
-    height: 251px;
-    object-fit: cover;
-    margin: 36px 0px;
+  display: flex;
+  flex-direction: column;
+
+  @include respond-above(lg) {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-column-gap: 80px;
+    font-size: 24px;
+    line-height: 40px;
+  }
+
+  .__right-content {
+    max-width: 600px;
+
+    @include respond-above(lg) {
+      margin-top: 138px;
+    }
+
+    .section-header-group {
+      font-size: 72px;
+      line-height: 107px;
+      letter-spacing: 0.05em;
+    }
+  }
+
+  .__left-content {
+    max-width: 600px;
+
+    .__about-photo {
+      width: 309px;
+      height: 251px;
+      object-fit: cover;
+      margin: 36px 0px;
+
+      @include respond-above(lg) {
+        width: 100%;
+        height: 350px;
+      }
+    }
   }
 }
