--- a/scss/_SocialMediaFeed.scss
+++ b/scss/_SocialMediaFeed.scss
@@ -2,11 +2,54 @@
   .__social-window {
     width: 300px;
     height: 400px;
+    padding: 20px;
     background: $white;
     margin-bottom: 36px;
+    color: black;
+    font-size: 14px;
+    overflow-y: scroll;
 
     @include respond-above(md) {
       width: 55vw;
+    }
+
+    .__weibo-post {
+      .__top {
+        display: grid;
+        grid-template-columns: auto 1fr;
+
+        .__profile-pic {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          margin-right: 10px;
+          grid-row-start: span 2;
+        }
+        .__username {
+          font-weight: 700;
+        }
+        .__post-date {
+          font-size: 12px;
+          font-weight: 400;
+          color: #939393;
+        }
+      }
+
+      .__post-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 7px;
+        margin-bottom: 20px;
+
+        .__content-text {
+          margin-bottom: 20px;
+        }
+
+        .__content-thumbnail {
+          border-radius: 15px;
+        }
+      }
     }
   }
 }
