Changed social media button behavior and style

--- a/scss/_SocialMediaButtons.scss
+++ b/scss/_SocialMediaButtons.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   margin-bottom: 36px;
 
-  .__circle-button {
+  .__social-button {
     display: flex;
     align-items: center;
     justify-content: center;
