--- a/scss/_VideoPreviewButton.scss
+++ b/scss/_VideoPreviewButton.scss
@@ -1,20 +1,21 @@
 .video-preview-button {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100vw;
-  height: 200px;
   margin-bottom: 36px;
   padding: 0;
 
   @include respond-above(lg) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: auto;
+    height: 200px;
     min-height: 66.67vh;
   }
 
   .__video-label {
     position: absolute;
-    top: 30%;
+    top: 70%;
     right: 0;
     left: 0;
     padding: 0px 4rem;
@@ -39,5 +40,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: 50% 65%;
+    overflow: hidden;
   }
 }
