Removed unused elements and commented out code

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
-@import "variables";
-@import "mixins";
-@import "globals";
+@import "Variables";
+@import "Mixins";
+@import "Globals";
 @import "NavBar";
 @import "HamburgerButton";
 @import "MobileMenu";
