--- a/scss/_NavBar.scss
+++ b/scss/_NavBar.scss
@@ -34,9 +34,10 @@
         background: $yellow;
         color: $black;
         cursor: pointer;
+        transition: all 0.3s ease;
 
         &:hover {
-          border: 2px solid $white;
+          transform: scale(1.05);
         }
 
         @include respond-above(lg) {
