--- a/scss/_SocialMediaFeed.scss
+++ b/scss/_SocialMediaFeed.scss
@@ -32,6 +32,11 @@
         .__username {
           font-weight: 700;
           color: black;
+          transition: all 0.3s ease;
+
+          &:hover {
+            color: $yellow;
+          }
         }
 
         .__post-date {
@@ -56,6 +61,11 @@
           width: 100%;
           height: 100%;
           border-radius: 15px;
+          transition: all 0.3s ease;
+
+          &:hover {
+            transform: scale(1.02);
+          }
         }
       }
     }
