--- a/scss/_VideoPreviewButton.scss
+++ b/scss/_VideoPreviewButton.scss
@@ -6,6 +6,11 @@
   width: 100vw;
   margin-bottom: 36px;
   padding: 0;
+  transition: all 0.3s ease;
+
+  &:hover {
+    transform: scale(1.01);
+  }
 
   @include respond-above(lg) {
     width: auto;
