fixed styling problem after sending a message

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -90,6 +90,7 @@ body {
 }
 
 .section-header-group {
+  margin-left: auto;
   border-left: 6px solid $yellow;
   padding-left: 10px;
   margin: 36px 0px;
