--- a/scss/_NavBar.scss
+++ b/scss/_NavBar.scss
@@ -1,26 +1,19 @@
 .nav-bar {
+  z-index: 100;
+  background: transparent;
+
   .nav-bar-contents {
     width: 100%;
     height: 64px;
-    padding: 1rem 1.5rem;
-    background: radial-gradient(
-      128.88% 128.88% at 103.9% -10.39%,
-      $black 0%,
-      $black 53.09%,
-      $black 100%
-    );
+    padding: 16px 24px;
+    padding-right: 16px;
     @include font-size(16);
     color: $white;
     border-bottom: 2px solid $yellow;
 
     @include respond-above(lg) {
       height: 140px;
-      background: radial-gradient(
-        128.88% 128.88% at 103.9% -10.39%,
-        $black 0%,
-        $black 53.09%,
-        $black 100%
-      );
+      padding-right: 3rem;
       @include font-size(24);
       color: $white;
       border: none;
@@ -91,7 +84,7 @@
         text-align: left;
         @include font-size(24);
         font-weight: 300;
-        border-bottom: 2px solid $black;
+        border-bottom: 2px solid transparent;
         transition: border 0.3s ease;
 
         &:hover {
