--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -112,15 +112,20 @@ body {
   // sometimes if there is not enough content the footer will move up
   display: flex;
   flex-direction: column;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .page-wrapper {
-  max-width: 1440px;
   margin: 24px 36px;
   margin-bottom: 200px;
 }
 
 .footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100vw;
   height: 200px;
   margin-bottom: 0px;
