--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -15,6 +15,7 @@ html {
 body {
   display: block;
   position: relative;
+  min-height: 100vh;
   font-family: "MuseoModerno", cursive;
   background: $black;
   background-repeat: no-repeat;
@@ -127,8 +128,9 @@ body {
   bottom: 0;
   left: 0;
   width: 100vw;
-  height: 200px;
+  height: 100px;
   margin-bottom: 0px;
+  margin-top: auto;
   background-image: url("../../images/yellow-wavy-footer.png");
 }
 
