--- a/scss/pages/_HomePage.scss
+++ b/scss/pages/_HomePage.scss
@@ -1,6 +1,49 @@
+.hero-banner {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  height: calc(100vh - 64px);
+  margin-top: auto;
+  margin-bottom: 36px;
+  background: #a00000;
+
+  @include respond-above(lg) {
+    height: calc(100vh - 140px);
+  }
+
+  .hero-title {
+    background: grey;
+    margin: 0 24px;
+    padding: 0 6px;
+    border: 4px solid white;
+
+    h1 {
+      text-align: center;
+      font-size: 24px;
+      font-family: "MuseoModerno", cursive;
+      font-weight: bold;
+      text-shadow: 1px 1px #a00000;
+
+      @include respond-above(sm) {
+        font-size: 48px;
+        padding: 24px
+      }
+    }
+  }
+
+  img {
+    width: 100%;
+
+    @include respond-above(lg) {
+      width: unset;
+      height: calc(100vh - 140px);
+    }
+  }
+}
+
 .home-page {
   flex-direction: column;
-  // margin-top: 100vw;
   z-index: -2;
 
   .__header {
@@ -19,7 +62,7 @@
     }
   }
 
-  .--hero-image {
+  .--donnie-image {
     width: 300px;
     height: 300px;
     background-image: url("../../images/pic.jpeg");
@@ -36,6 +79,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: auto;
+    margin: 0 36px;
 
     .__left-elements {
       margin-top: auto;
