--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,14 +4,15 @@
 @import "NavBar";
 @import "HamburgerButton";
 @import "MobileMenu";
-@import "NotFound";
-@import "HomePage";
 @import "SocialMediaButtons";
 @import "VideoPreviewButton";
 @import "SocialMediaFeed";
 @import "Contact";
-@import "AboutPage";
-@import "VideosPage";
-@import "EventCalendar";
 @import "Spinner";
-@import "LandingPage";
+
+@import "./pages/HomePage";
+@import "./pages/AboutPage";
+@import "./pages/VideosPage";
+@import "./pages/EventPage";
+@import "./pages/NotFoundPage";
+@import "./pages/LandingPage";
