compressed images for better loading speed

--- a/styles/pages/Home.scss
+++ b/styles/pages/Home.scss
@@ -58,9 +58,7 @@
   }
 
   .--donnie-image {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
+    width: 100%;
     object-fit: cover;
     object-position: 55% 0;
     margin-bottom: 36px;
