--- a/styles/pages/About.module.scss
+++ b/styles/pages/About.module.scss
@@ -14,7 +14,7 @@
       width: 100%;
       height: 40vh;
       margin: 36px 0px;
-      background-image: url("/images/donnie-at-comedy-club-china.jpg");
+      background-image: url("/images/donnie-at-comedy-club-china.webp");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
