Added showtimes to homepage

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -2,8 +2,7 @@
 
 .section-header-style-wrapper {
   display: flex;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
 }
 
 .section-header-group {
