Updated contact page
added alternative contact methods

--- a/styles/pages/Contact.scss
+++ b/styles/pages/Contact.scss
@@ -144,3 +144,11 @@
     }
   }
 }
+
+.contact-other {
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
