--- a/styles/Shows.scss
+++ b/styles/Shows.scss
@@ -16,6 +16,12 @@
       max-width: 33.333333%;
       position: relative;
       width: 100%;
+      transition: opacity 0.3s ease;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.5;
+      }
 
       @include respond-below(sm) {
         max-width: unset;
@@ -115,6 +121,7 @@
               object-fit: contain;
 
               @include respond-below(sm) {
+                max-width: 100vw;
                 width: unset;
                 height: unset;
                 object-fit: unset;
