renamed appearances page to media

--- a/styles/pages/Media.module.scss
+++ b/styles/pages/Media.module.scss
@@ -1,11 +1,11 @@
-.appearances {
-  .appearances-group {
+.media {
+  .media-group {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 
-    .appearances-item {
+    .media-item {
       padding: 0 16px;
       img {
         width: 300px;
